[fix] Text  center alignment

--- a/css/style.css
+++ b/css/style.css
@@ -589,6 +589,7 @@ p {
   line-height: 45px;
   padding-bottom: 23px;
   padding-top: 16px;
+  margin-top: 10%;
 }
 
 .banner-txt p {
